--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-
-fastapi==0.79.0
-orjson==3.4.1
-pydantic==1.9.0
+httpx
+pytest
+fastapi
+orjson
+pydantic>=1.10.0
 uvicorn==0.18.2
-uvloop==0.14.0
+uvloop>=0.14.0
 
