--- a/.github/workflows/app-testing.yml
+++ b/.github/workflows/app-testing.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.11]
+        python-version: [3.9, '3.10', 3.11]
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
@@ -31,7 +31,4 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=119 --statistics --config=setup.cfg
     - name: pytest
       run: |
-        coverage run -m pytest  -v -s
-    - name: Generate Coverage Report  
-      run: |
-        coverage report -m
+        python -m pytest tests
